added logic to validate userguess & update display word

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <p class="lead">A fantasical twist on the classic word guess game!</p>
       <hr class="my-4">
       <p>Instructions Here</p>
-      <p class="wordDisplay">This is where the blank spaces will display and refresh as letters are guessed correctly.</p>
+      <div id="wordDisplay"></div>
       <div class="scoreTally">Guesses/Wins/Losses/etc display here</div>
 
     </div>
