added logic for win/loss conditions

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <p class="lead">A fantasical twist on the classic word guess game!</p>
       <hr class="my-4">
       <p>Instructions Here</p>
-      <div id="wordDisplay"></div>
+      <div id="wordDisplay">Loading...</div>
       <div class="scoreTally">Guesses/Wins/Losses/etc display here</div>
 
     </div>
