--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
       <hr class="my-4">
       <p>Instructions Here</p>
       <div id="wordDisplay">Loading...</div>
-      <div class="scoreTally">Guesses/Wins/Losses/etc display here</div>
+      <div class="scoreTally">
+        <p id="guessedLetters"></p>
+        <p id="guessesRemaining"></p>
+        <p id="wins"></p>
+        <p id="losses"></p>
+      </div>
 
     </div>
   </div>
