tighen valid guess logic, display last round's word

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
       <h1 class="display-4">Fantasy Word Guess Game</h1>
       <p class="lead">A fantasical twist on the classic word guess game!</p>
       <hr class="my-4">
-      <p>Instructions Here</p>
+      <div id="lastWord"></div>
+      <p>Press any key to start!</p>
       <div id="wordDisplay">Loading...</div>
       <div class="scoreTally">
         <p id="guessedLetters"></p>
