--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 <body>
   <div class="container">
-    <div class="jumbotron">
-      <h1 class="display-4">Fantasy Word Guess Game</h1>
+    <div class="jumbotron text-center bg-light">
+      <h1 class="display-4 text-info">Fantasy Word Guess Game</h1>
       <p class="lead">A fantasical twist on the classic word guess game!</p>
       <hr class="my-4">
       <div id="lastWord"></div>
